tests/spec/compile-fail/126_let_keyword_removed.zn
// category: compile-fail
// profile: freestanding
// purpose: Zeno uses val and var for local bindings; let is not a binding keyword

module tests.fail.letKeywordRemoved;

fn bad() -> U32 {
    let x = 1; // expected-error: use val for immutable bindings or var for mutable bindings
    return x;
}
